# Trident

./: .env.ci  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: ci.yml  release.yml
api/: README.md  openapi.yaml
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: config.rs  main.rs
crates/api/src/services/: events.rs
crates/backfill/src/: main.rs
crates/indexer/: Cargo.toml  Dockerfile
crates/indexer/src/: config.rs  main.rs  metrics.rs
database/: schema.sql
database/migrations/: 0001_init.sql  0003_alert_webhook.sql  0003_api_keys.sql  0003_soroban_events_network.sql  0004_soroban_events_network.sql  0005_soroban_events_network.sql  0006_audit_log.sql  0007_webhooks.sql  0008_parse_errors.sql  0009_soroban_events_indexes.sql  20240101000000_init.sql
docker/: ci-seed.sql  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml
docs/: deployment.md  kubernetes.md  performance.md
explorer/: .env.example  README.md  package-lock.json  package.json  tailwind.config.mjs
explorer/src/layouts/: Base.astro
explorer/src/lib/: api.ts  format.ts  types.ts
explorer/src/pages/: index.astro
helm/trident/: Chart.yaml  values.yaml
helm/trident/templates/: _helpers.tpl  go-api-deployment.yaml  go-api-hpa.yaml  grpc-api-deployment.yaml  indexer-deployment.yaml  ingress.yaml  nginx-deployment.yaml
proto/: trident.proto
sdk/go/: client.go  client_test.go  go.mod  types.go
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  errors.rs  lib.rs  subscription.rs  types.rs
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: api-types.gen.ts  errors.ts  index.ts  subscription.ts
sdk/typescript/tests/: client.test.ts  graphql.test.ts
services/api/: Dockerfile  README.md  go.mod  go.sum  main.go  pgbouncer.go  webhooks.go  webhooks_test.go
services/api/config/: config_test.go
(+45 files in other folders)
