[package]
name = "trident-api"
version = "0.1.0"
edition = "2021"

[dependencies]
trident-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# OpenTelemetry distributed tracing (issue #81)
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Redis (streams + connection manager)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }

# Types
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
